Fix background image bug
Tried to link image files using relative .. but it breaks on github
pages for some reason. Now using absolute path, relative to root /

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@
 }
 
 .main-container {
-	background-image: url("/images/morning.jpg");
 	background-size:cover;
 	display: flex;
 	flex-flow: column nowrap;
